# docs2llms

./: .gitignore  README.md  llms.txt  pyproject.toml
config/: default.yaml
docstest/: clients.md  faq.md  fast-flux.md  introduction.md  model-endpoints.md  private-serverless-models.md  quick-start.md  real-time.md  supported-machines.md
docstest/authentication/: github.md  key-based.md
docstest/clients/: dart.md  java.md  javascript.md  kotlin.md  python.md  swift.md
docstest/examples/: running-a-container.md
docstest/guidelines/: dockerfile.md
docstest/https_/: docs.fal.ai.md
docstest/integrations/: nextjs.md  vercel.md
docstest/model-endpoints/: queue.md  server-side.md  webhooks.md  workflows.md
docstest/private-serverless-models/: accessing-persistent-storage.md  hot-model-routing.md  pydantic.md  real-time-endpoints.md  return-files-and-images.md  running-containerized-model.md  runtime-optimization.md  setting-secrets.md
docstest/real-time/: quickstart.md  secrets.md
examples/: basic_usage.py
src/docs2llms/: __init__.py  cli.py
src/docs2llms/core/: cleaner.py  converter.py  parser.py  processor.py
src/docs2llms/io/: extractor.py  fetcher.py  spider.py
src/docs2llms/utils/: config.py  utils.py
tests/: conftest.py  test_cleaner.py
